--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "doc-bootstrap",
+  "name": "@daniel-livingston/doc-bootstrap",
   "private": true,
   "version": "0.0.0",
   "type": "module",
