--- a/package.json
+++ b/package.json
@@ -20,11 +20,24 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^21.1.6",
     "sass": "^1.69.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vitest": "^1.0.4"
+  },
+  "dependencies": {
+    "dompurify": "^3.0.6",
+    "highlight.js": "^11.9.0",
+    "jsdom": "^23.0.1",
+    "markdown-toc": "^1.2.0",
+    "marked": "^11.1.0",
+    "marked-gfm-heading-id": "^3.1.2",
+    "marked-highlight": "^2.1.0"
   }
 }
