--- a/package.json
+++ b/package.json
@@ -34,11 +34,20 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/dompurify": "^3.0.5",
+		"@types/jsdom": "^21.1.6",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"dompurify": "^3.0.6",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"highlight.js": "^11.9.0",
+		"jsdom": "^23.0.1",
+		"markdown-toc": "^1.2.0",
+		"marked": "^11.1.0",
+		"marked-gfm-heading-id": "^3.1.2",
+		"marked-highlight": "^2.1.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"publint": "^0.1.9",
